# scnoisemeter

./: .gitignore  .zenodo.json  README.md  pyproject.toml
docs/: documentation.md
scnoisemeter/: __init__.py  cli.py  constants.py
scnoisemeter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scnoisemeter/modules/: annotation.py  classifier.py  intergenic_profiler.py  metrics.py  pipeline.py  report.py  report_figures.py
scnoisemeter/utils/: annotation_fetcher.py  bam_inspector.py  discover_inspector.py  sample_sheet.py
tests/: conftest.py  test_adversarial.py  test_annotation_fetcher.py  test_cell_barcodes.py  test_core.py  test_discover.py  test_integration.py  test_intergenic.py  test_report.py  test_sample_sheet.py
tests/benchmark/: README.md  run_and_evaluate.py  synthesize_bam.py
